Bugfix for dream text overflowing

--- a/client/src/components/Dream.css
+++ b/client/src/components/Dream.css
@@ -5,6 +5,7 @@
   display: flex;
   float: left;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  overflow: auto;
 }
 .date {
   align-self: center;
